--- a/src/_variables.sass
+++ b/src/_variables.sass
@@ -8,16 +8,19 @@
 // Ideal for namespacing.
 $prefix: 'squid-' !default
 
+
 // Max width of site
 // ------------------------------------
 // Specify 'none' for a completely fluid layout.
 $site-max-width: 1440px !default
 
+
 // Columns
 // ------------------------------------
 $columns: 12 !default
 
-// Width, Height and Offset naming
+
+// Width, height and offset naming
 // ------------------------------------
 
 // Specify the desired name for the width and height of squid's classes
@@ -35,6 +38,7 @@ $dimension-prefixes: (width: 'w', height: 'h') !default
 // push for "push--2--large"
 $offset-prefixes: (top: 't', right: 'r', bottom: 'b', left: 'l') !default
 
+
 // Breakpoints
 // ---------------------------------
 // Specify your desired breakpoints. Add as many as required.
@@ -43,6 +47,7 @@ $offset-prefixes: (top: 't', right: 'r', bottom: 'b', left: 'l') !default
 // desktop for "width--3--desktop"
 /// And so forth..
 $breakpoints: ( sm: 480px, md: 700px, lg: 1024px ) !default
+
 
 // Delimiters
 // ------------------------------------
