🔧 Use no global prefix as default

--- a/src/_variables.sass
+++ b/src/_variables.sass
@@ -6,7 +6,7 @@
 // -----------------------------------
 // All squid classes will be prefixed with this string.
 // Ideal for namespacing.
-$prefix: 'squid-' !default
+$prefix: '' !default
 
 
 // Max width of site
