--- a/src/_base.sass
+++ b/src/_base.sass
@@ -4,8 +4,8 @@
 
 .#{$prefix}container
   width: 100%
-  @if($site-max-width != 'none')
-    max-width: $site-max-width
+  @if($squid-max-width != 'none')
+    max-width: $squid-max-width
     margin-left: auto
     margin-right: auto
 
