--- a/src/_functions.sass
+++ b/src/_functions.sass
@@ -13,9 +13,9 @@
 //  Calculate length from number of grid rectangles and site max width
     @squareSize Number of grid squares
     @columns Number of columns
-    @site-max-width Max width of site
+    @squid-max-width Max width of site
     @return Length in pixels
 @function calculateMaxSize($squareSize)
-  @if($site-max-width == 'none')
+  @if($squid-max-width == 'none')
     @return none
-  @return $squareSize * $site-max-width / $columns
+  @return $squareSize * $squid-max-width / $columns
