--- a/src/_mixins.sass
+++ b/src/_mixins.sass
@@ -2,26 +2,26 @@
 // ============
 
 // Media query
-=min-site-max-width
-  @if ($site-max-width != 'none')
-    @media (min-width: $site-max-width)
+=min-squid-max-width
+  @if ($squid-max-width != 'none')
+    @media (min-width: $squid-max-width)
       @content
 
 // Calculate height of grid rectangle
 =height($height)
   height: calculateViewportWidth($height)
-  @if ($site-max-width != 'none')
+  @if ($squid-max-width != 'none')
     max-height: calculateMaxSize($height)
 
 // Calculate width of grid rectangle
 =width($width)
   width: calculateViewportWidth($width)
-  @if ($site-max-width != 'none')
+  @if ($squid-max-width != 'none')
     max-width: calculateMaxSize($width)
 
 // Calculate margin from direction and distance
 =margin($direction, $distance)
   margin-#{$direction}: calculateViewportWidth($distance)
-  @if ($site-max-width != 'none')
-    +min-site-max-width
+  @if ($squid-max-width != 'none')
+    +min-squid-max-width
       margin-#{$direction}: calculateMaxSize($distance)
