--- a/src/_variables.sass
+++ b/src/_variables.sass
@@ -12,7 +12,7 @@ $prefix: '' !default
 // Max width of site
 // ------------------------------------
 // Specify 'none' for a completely fluid layout.
-$site-max-width: 1440px !default
+$squid-max-width: 1440px !default
 
 
 // Columns
