🔧 Use ems by default

--- a/src/_variables.sass
+++ b/src/_variables.sass
@@ -12,7 +12,7 @@ $prefix: '' !default
 // Max width of site
 // ------------------------------------
 // Specify 'none' for a completely fluid layout.
-$squid-max-width: 1440px !default
+$squid-max-width: 90em !default
 
 
 // Columns
@@ -46,7 +46,7 @@ $offset-prefixes: (top: 't', right: 'r', bottom: 'b', left: 'l') !default
 // lg for "width--3--lg"
 // desktop for "width--3--desktop"
 /// And so forth..
-$breakpoints: ( sm: 480px, md: 700px, lg: 1024px ) !default
+$breakpoints: ( sm: 30em, md: 45em, lg: 64em) !default
 
 
 // Delimiters
