✨ Add align-center helper

--- a/src/_helpers.sass
+++ b/src/_helpers.sass
@@ -27,6 +27,9 @@
   .#{$prefix}align-top
     align-self: flex-start
 
+  .#{$prefix}align-center
+    align-self: center
+
   .#{$prefix}align-bottom
     align-self: flex-end
 
